bpo-47250: Fix refleak from object.__getstate__() (GH-32403)

Co-authored-by: Brandt Bucher <brandt@python.org>